--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     width: 100%;
     height: 100vh;
     margin: 0;
-    background-color: rgba(170, 190, 130, 0.3);
+    background-color: rgb(170, 190, 130);
     color: rgb(12, 53, 128);
     font-family: Tahoma;
     font-size: 16px;
